# ai_chat_memory_bot

./: README.md  chat.history.json  config.json  main.py  pyproject.toml  test_agent_run.py  test_bot_memory.json  test_utils.py
.github/workflows/: test.yml
src/: agent.py  utils.py
tests/: test_agent.py
